--- a/assets/css/constants.scss
+++ b/assets/css/constants.scss
@@ -3,5 +3,5 @@ $responsive_start: 750px;
 $mobile_start: 500px;
 $lt_grey: #585858;
 $blue: #008aff;
-$body_font: "Helvetica Neue", "Helvetica", sans-serif;
+$body_font: "Helvetica Neue", "Helvetica";
 $font_size_regular: 17px;
