--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,14 +1,14 @@
 @import "constants";
 
-nav.pagination {
+.pagination {
   padding: 40px 40px 60px 40px;
   border-top: 1px solid #e2e2e2;
-  span.next {
-    display: block;
-    float: right;
-  }
-  span.prev {
-    display: block;
-    float: left;
-  }
+}
+
+.next {
+  float: right;
+}
+
+.prev {
+  float: left;
 }
