--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@ layout: compress
       <figure id="logo">
         <a href="/">
           <picture>
+            <source srcset="/assets/images/developer-koala-mobile.webp" type="image/webp" media="(max-width: 500px)">
             <source srcset="/assets/images/developer-koala.webp" type="image/webp">
             <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
           </picture>
@@ -31,17 +32,17 @@ layout: compress
       <h1><a href="/">{{site.author.name}}</a></h1>
       <label for='open_menu' id='mobile_menu'>&#9776;</label>
       <input type='checkbox' id='open_menu' class='hidden' />
-      <ul id="user_nav">
-        <li id="menu">
-          <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}</ul>
-        </li>
-        <li id="social_icons">
+      <div id="user_nav">
+        <div id="menu">
+          {% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}
+        </div>
+        <div id="social_icons">
           <a href="http://www.twitter.com/{{ site.author.twitter }}">{% include images/twitter.svg %}</a>
           <a href="http://www.github.com/{{ site.author.github }}">{% include images/github.svg %}</a>
           <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}">{% include images/linkedin.svg %}</a>
-        </li>
-      </ul>
+        </div>
+    </div>
     </header>
-    <section id="river" role="main">{{content}}</section>
+    <section id="river">{{content}}</section>
   </body>
 </html>
