--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <section>
   <article class="post">
     <h2 class="entry-title">
-      <a href="{{ page.url }}" class="no-link" title="Permalink to {{ page.title }}" rel="bookmark">{{ page.title }}</a>
+      <a href="{{ page.url }}">{{ page.title }}</a>
     </h2>
     {{ content }}
   </article>
