--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <section>
-  <article class="post">
+  <div class="post">
     <h2 class="entry-title">
       <a href="{{ page.url }}">{{ page.title }}</a>
     </h2>
     {{ content }}
-  </article>
+  </div>
 </section>
