--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -1,65 +1,40 @@
 @import "constants";
 
-article {
-  max-width: 600px;
-  img {
-    display: block;
-    padding: 0;
-    width: 100%;
-    float: none;
-  }
+h2 a {
+  font-size: 25px;
+}
+
+li {
+  line-height: 25px;
+  color: #4d4d4d;
+}
+
+img {
+  display: block;
+  padding: 0;
+  width: 100%;
+  float: none;
 }
 
 .post {
+  max-width: 600px;
   padding: 24px 40px;
   border-top: 1px solid #e2e2e2;
-  h2 a {
-    color: #000;
-    font-size: 25px;
-    line-height: 28px;
-    -webkit-font-smoothing: antialiased;
-  }
-  h2 {
-    font-size: 20px;
-  }
-  li {
-    line-height: 25px;
-    color: #4d4d4d;
-  }
   @media (max-width: $responsive_start) {
     padding: 15px;
     &.post:first-of-type {
       border: none;
     }
-    img {
-      width: 100%;
-    }
+  }
+
+  p:last-child a:last-child {
+    display: block;
+    margin-top: 40px;
+    font-weight: 700;
   }
 }
 
 .caption {
-  font-size: 80% !important;
+  font-size: 80%;
   text-align: center;
-  font-style: italic;
-}
-
-.continue-reading {
-  padding: 7px 20px;
-  border: 1px solid #e4e4e4;
-  border-radius: 20px;
-  color: #767676;
-  margin-top: 10px;
-  display: inline-block;
-
-  &:hover {
-    background-color: $blue;
-    color: white;
-    border-color: $blue;
-  }
-
-  @media (max-width: $responsive_start) {
-    margin: 10px auto;
-    display: block;
-    text-align: center;
-  }
 }
