--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,66 +1,64 @@
 @import "constants";
 
 #logo {
+  margin: 0;
   img {
     margin-top: 25px;
     max-width: 200px;
     width: 100%;
   }
-  @media (max-width: $responsive_start) {
-    width: 30px;
-    height: 30px;
-    float: left;
-    padding: 0 0 0 15px;
-    margin: 0 auto;
-    position: relative;
-    left: auto;
-    right: auto;
-    top: 0;
-    img {
-      margin-top: 0;
-    }
-  }
-}
-
-h1 {
-  @media (max-width: $responsive_start) {
-    font-size: 25px;
-    float: left;
-    margin: 0;
-    padding-left: 10px;
-  }
 }
 
 #sidebar {
   position: fixed;
+  top: 0;
   width: 26%;
   margin: 0 30px;
-  @media (max-width: $responsive_start) {
-    margin: 0;
-    z-index: 99;
-    width: 100%;
-    text-align: center;
-    background-color: #fffe;
-    border-bottom: 1px solid #e2e2e2;
-    padding-top: 15px;
-  }
 }
 
 #mobile_menu {
   display: none;
   float: right;
-  margin-right: 15px;
   font-size: 20px;
-  @media (max-width: $responsive_start) {
-    display: block;
-  }
 }
 
 /* Only top and bottom padding for first header */
-#river > header:first-child {
-  padding: 40px 0 40px 40px;
-}
 
 #top_time {
   font-weight: 700;
+  padding: 40px;
+  margin: 0;
+}
+
+/* Responsive Changes */
+
+@media (max-width: $responsive_start) {
+  #logo {
+    float: left;
+    img {
+      margin-top: 0;
+    }
+  }
+
+  h1 {
+    font-size: 25px;
+    float: left;
+    margin: 0;
+    padding-left: 10px;
+  }
+
+  #sidebar {
+    margin: 0;
+    z-index: 9;
+    width: 100%;
+    text-align: center;
+    background-color: #fffe;
+    border-bottom: 1px solid #e2e2e2;
+    padding: 15px;
+    box-sizing: border-box;
+  }
+
+  #mobile_menu {
+    display: block;
+  }
 }
