--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,18 +3,13 @@ theme:
   name: jb-svbtle
 layout: compress
 ---
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1.5,minimum-scale=0.5'>
+    <meta name='viewport' content='width=device-width'>
+    <meta name='description' content="{{page.description}}" />
     <link rel='icon' type='image/png' href='/assets/images/icon.png' />
     <title>{{page.title}}</title>
-    <meta property='og:type' content='website' />
-    <meta property='og:url' content='{{page.url}}' />
-    <meta property='og:title' content="{{page.title}}" />
-    <meta property='og:description' content='{{page.description}}' />
-    <meta property='og:image' content='{{page.image}}' />
     <style>{% include style.min.css %}</style>
   </head>
   <body>
@@ -23,7 +18,7 @@ layout: compress
         <picture>
           <source srcset="/assets/images/developer-koala-mobile.webp" type="image/webp" media="(max-width: 750px)">
           <source srcset="/assets/images/developer-koala.webp" type="image/webp">
-          <img src="/assets/images/developer-koala.jpg" />
+          <img alt="koala" src="/assets/images/developer-koala.jpg" />
         </picture>
       </a>
       <h1><a href="/">{{site.author.name}}</a></h1>
@@ -34,9 +29,9 @@ layout: compress
           {% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}
         </div>
         <div id="social_icons">
-          <a href="http://www.twitter.com/{{ site.author.twitter }}">{% include images/twitter.svg %}</a>
-          <a href="http://www.github.com/{{ site.author.github }}">{% include images/github.svg %}</a>
-          <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}">{% include images/linkedin.svg %}</a>
+          <a href="http://www.twitter.com/{{ site.author.twitter }}" aria-label="twitter">{% include images/twitter.svg %}</a>
+          <a href="http://www.github.com/{{ site.author.github }}" aria-label="github">{% include images/github.svg %}</a>
+          <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}" aria-label="linkedin">{% include images/linkedin.svg %}</a>
         </div>
       </div>
     </div>
