--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -10,10 +10,13 @@
 }
 
 #sidebar {
-  position: fixed;
-  top: 0;
-  width: 26%;
-  margin: 0 30px;
+  padding: 24px 30px;
+  box-sizing: border-box;
+  border-right: 1px solid #e3e3e3;
+  position: sticky;
+  align-self: flex-start;
+  top: 0px;
+  height: 100vh;
 }
 
 #mobile_menu {
@@ -23,12 +26,6 @@
 }
 
 /* Only top and bottom padding for first header */
-
-#top_time {
-  font-weight: 700;
-  padding: 40px;
-  margin: 0;
-}
 
 /* Responsive Changes */
 
@@ -59,6 +56,7 @@
     border-bottom: 1px solid #e2e2e2;
     padding: 15px;
     box-sizing: border-box;
+    height: auto;
   }
 
   #mobile_menu {
