--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -1,14 +1,15 @@
 @import "constants";
 
 #main {
-  margin-left: calc(26% + 60px);
-  border-left: 1px solid #e3e3e3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
 }
 
 /* Navigation */
 
 #user_nav {
-  position: relative;
   transition: max-height 0.4s ease-in-out;
   overflow: hidden; // Ensure menu is not visible until nav is expanded
   margin: 30px 0 0 0;
@@ -24,7 +25,7 @@
 }
 
 #social_icons {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   padding: 0 30px 30px;
   a {
@@ -50,15 +51,10 @@ path {
 }
 
 @media (max-width: $responsive_start) {
-  #top_time {
-    display: none;
-  }
   .pagination {
     padding: 0 10px 0 10px;
   }
   #main {
-    // Increase top margin to make the first post title visible
-    margin: 45px 0;
     // Remove left sidebar border because there is no sidebar anymore
     border: none;
   }
