--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@
 body {
   font-family: $body_font;
   margin: 0;
+  display: flex;
+  @media (max-width: $responsive_start) {
+    flex-direction: column;
+  }
 }
 
 a,
