--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -9,16 +9,13 @@
 
 /* Navigation */
 
-#user_nav {
+#u {
   transition: max-height 0.3s ease-out;
   overflow: hidden; // Ensure menu is not visible until nav is expanded
-  position: absolute;
-  background-color: white;
-  left: 0;
-  top: 63px;
 }
 
-#menu {
+// menu
+#e {
   a {
     display: block;
     font-weight: 700;
@@ -27,10 +24,10 @@
   }
 }
 
-#social_icons {
+#s {
   position: absolute;
   bottom: 0;
-  padding: 0 30px 30px;
+  padding-bottom: 24px;
   a {
     margin-right: 10px;
     width: 35px;
@@ -44,40 +41,11 @@ path {
   fill: #585858;
 }
 
-// #open_menu is the checkbox used to control the mobile responsive menu
-#open_menu {
+// #o is the checkbox used to control the mobile responsive menu
+#o {
   display: none;
 }
 
-#open_menu:checked ~ #user_nav {
+#o:checked ~ #u {
   max-height: 50vh;
-}
-
-@media (max-width: $responsive_start) {
-  .pagination {
-    padding: 0 10px 0 10px;
-  }
-  #main {
-    // Remove left sidebar border because there is no sidebar anymore
-    border: none;
-  }
-  #user_nav {
-    // Setting max height to 0 hides the menu until the checkbox is checked
-    max-height: 0;
-    // Width 100% needed for iOS Safari
-    width: 100%;
-  }
-  #menu {
-    padding: 0;
-    a {
-      border-top: 1px solid #e2e2e2;
-      margin: 0;
-      padding: 15px;
-    }
-  }
-  #social_icons {
-    border-top: 1px solid #e2e2e2;
-    position: relative;
-    padding: 15px 0 0 0;
-  }
 }
