--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-  <div class="post">
+  <div class="p">
     <h2>
       <a href="{{ page.url }}">{{ page.title }}</a>
     </h2>
