--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@ layout: compress
   <head>
     <meta name='viewport' content='width=device-width'>
     <meta name='description' content="{{page.description}}" />
-    <link rel='icon' type='image/png' href='/assets/images/icon.png' />
+    <link rel='icon' type='image/png' href='/images/icon.png' />
     <title>{{page.title}}</title>
     <style>{% include style.min.css %}</style>
   </head>
@@ -16,9 +16,9 @@ layout: compress
     <div id="b">
       <a id="logo" href="/">
         <picture>
-          <source srcset="/assets/images/developer-koala-mobile.webp" type="image/webp" media="(max-width: 750px)">
-          <source srcset="/assets/images/developer-koala.webp" type="image/webp">
-          <img alt="koala" src="/assets/images/developer-koala.jpg" />
+          <source srcset="/images/developer-koala-mobile.webp" type="image/webp" media="(max-width: 750px)">
+          <source srcset="/images/developer-koala.webp" type="image/webp">
+          <img alt="koala" src="/images/developer-koala.jpg" />
         </picture>
       </a>
       <h1><a href="/">{{site.author.name}}</a></h1>
