--- a/_includes/css/article.scss
+++ b/_includes/css/article.scss
@@ -30,7 +30,21 @@ p a {
   text-align: center;
 }
 
+// Fixed height responsive header images
+
 .cn {
   width: 100%;
+  height: 100%;
   text-align: center;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.nc {
+  overflow: hidden;
+  height: 0;
+  position: relative;
 }
