--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@ layout: compress
     <div id="b">
       <a id="logo" href="/">
         <picture>
+          <source srcset="/images/developer-koala-mobile-2k.webp" type="image/webp" media="(max-width: 750px) and (min-resolution: 2dppx)">
           <source srcset="/images/developer-koala-mobile.webp" type="image/webp" media="(max-width: 750px)">
+          <source srcset="/images/developer-koala-2x.webp" type="image/webp" media="(min-resolution: 2dppx)">
           <source srcset="/images/developer-koala.webp" type="image/webp">
           <img alt="koala" src="/images/developer-koala.jpg" />
         </picture>
