Fix responsive padding and tap target

--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -41,87 +41,6 @@ li {
   text-align: justify;
 }
 
-@media (max-width: $responsive_start) {
-  body {
-    flex-direction: column;
-  }
-
-  .p {
-    padding: 15px;
-    box-sizing: border-box;
-    width: 100%;
-
-    &.p:first-of-type {
-      border: none;
-    }
-  }
-
-  #logo {
-    float: left;
-    width: 30px;
-    height: 27px; // Harcode height to eliminate layout shifts during rendering
-    img {
-      margin-top: 0;
-      height: 30px;
-      width: auto;
-    }
-  }
-
-  h1 {
-    font-size: 25px;
-    float: left;
-    margin: 0;
-    padding-left: 10px;
-  }
-
-  #b {
-    margin: 0;
-    z-index: 9;
-    width: 100%;
-    text-align: center;
-    background-color: #fffe;
-    border-bottom: 1px solid #e2e2e2;
-    padding: 15px;
-    box-sizing: border-box;
-    height: auto;
-  }
-
-  #m {
-    display: block;
-  }
-
-  .pagination {
-    padding: 0 10px;
-  }
-  #main {
-    // Remove left sidebar border because there is no sidebar anymore
-    border: none;
-  }
-  #u {
-    // Setting max height to 0 hides the menu until the checkbox is checked
-    max-height: 0;
-    // Width 100% needed for iOS Safari
-    width: 100%;
-    position: absolute;
-    background-color: #fffe;
-    left: 0;
-    top: 63px;
-  }
-  #e {
-    padding: 0;
-    a {
-      border-top: 1px solid #e2e2e2;
-      margin: 0;
-      padding: 15px;
-    }
-  }
-  #s {
-    border-top: 1px solid #e2e2e2;
-    position: relative;
-    padding: 5px;
-  }
-}
-
 /* Article Rules */
 
 img {
@@ -171,4 +90,95 @@ p a {
   overflow: hidden;
   height: 0;
   position: relative;
+}
+
+// Responsive
+
+@media (max-width: $responsive_start) {
+  body {
+    flex-direction: column;
+  }
+
+  .p {
+    padding: 0px 15px;
+    box-sizing: border-box;
+    width: 100%;
+
+    &.p:first-of-type {
+      border: none;
+    }
+  }
+
+  #logo {
+    float: left;
+    width: 30px;
+    height: 27px; // Harcode height to eliminate layout shifts during rendering
+    img {
+      margin-top: 0;
+      height: 30px;
+      width: auto;
+    }
+  }
+
+  h1 {
+    font-size: 25px;
+    float: left;
+    margin: 0;
+    padding-left: 10px;
+  }
+
+  #b {
+    margin: 0;
+    z-index: 9;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #e2e2e2;
+    padding: 15px;
+    box-sizing: border-box;
+    height: auto;
+    background-color: #fffd;
+    backdrop-filter: blur(3px);
+  }
+
+  #m {
+    display: block;
+
+    // Make the 'tap target' larger
+    padding: 17px;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .pagination {
+    padding: 0 10px;
+  }
+  #main {
+    // Remove left sidebar border because there is no sidebar anymore
+    border: none;
+  }
+  #u {
+    // Setting max height to 0 hides the menu until the checkbox is checked
+    max-height: 0;
+    // Width 100% needed for iOS Safari
+    width: 100%;
+    position: absolute;
+    background-color: #fffe;
+    left: 0;
+    top: 60px;
+  }
+  #e {
+    padding: 0;
+    a {
+      border-top: 1px solid #e2e2e2;
+      margin: 0;
+      padding: 15px;
+    }
+  }
+  #s {
+    border-top: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
+    position: relative;
+    padding: 5px;
+  }
 }
