--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -73,25 +73,6 @@ p a {
   text-align: center;
 }
 
-// Fixed height responsive header images
-
-.cn {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
-
-.nc {
-  overflow: hidden;
-  height: 0;
-  position: relative;
-}
-
 // Responsive
 
 @media (max-width: $responsive_start) {
@@ -181,4 +162,24 @@ p a {
     position: relative;
     padding: 5px;
   }
+}
+
+// Header images
+
+.i0 {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.i1 {
+  height: 0;
+  position: relative
+}
+
+.i2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0
 }
