--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -2,14 +2,79 @@
 @import "./sidebar.scss";
 @import "./header.scss";
 
+html, body {
+  height: 100%;
+}
+
+#c {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#d {
+  display: flex;
+  width: 992px;
+  column-gap: 50px;
+
+  > div {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  p {
+    color: #474747;
+    letter-spacing: 0.125rem;
+    width: calc(100% + 0.125rem);
+    font-size: 16px;
+  }
+}
+
+#n {
+  display: flex;
+  flex: 1;
+  align-items: flex-end;
+  column-gap: 20px;
+
+  a {
+    background-color: white;
+    width: 120px;
+    padding: 15px 20px;
+    font-size: 17px;
+    letter-spacing: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 25px;
+  }
+
+  svg {
+    margin-right: 10px;
+    width: 25px;
+    height: 25px;
+  }
+}
+
+
+h1 {
+  font-size: 70px;
+  margin: 0 0 20px;
+  font-weight: 700;
+  color: rgb(71, 71, 71)
+}
+
 body {
-  font-family: $body_font;
+  font-family: 'Inconsolata', monospace;
   margin: 0;
   display: flex;
+  background-color: rgb(247, 247, 247);
 
   // Make everything pretty
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  // -webkit-font-smoothing: antialiased;
+  // text-rendering: optimizeLegibility;
 }
 
 h2 {
@@ -38,7 +103,6 @@ p,
 li {
   line-height: 28px;
   margin: 20px 0;
-  text-align: justify;
 }
 
 /* Article Rules */
@@ -57,7 +121,7 @@ p a {
 
 .p {
   max-width: 800px;
-  padding: 24px 40px;
+  padding: 24px 0px;
 
   // 'Read more' link
   p:last-child a:last-child {
