--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -1,14 +1,19 @@
+$breakpoint: 880px;
+
 :root {
   --font: 'Inconsolata', monospace;
   --bg-color: rgb(247, 247, 247);
   --text-color: #474747;
   --highlight-color: rgb(238, 123, 30);
-  --break: 880px;
 }
 
 body, html {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+
+  @media(min-width: $breakpoint) {
+    height: 100%;
+  }
 }
 
 body {
@@ -71,7 +76,7 @@ p, a {
     }
   }
 
-  @media(max-width: 880px) {
+  @media(max-width: $breakpoint) {
     flex-direction: column-reverse;
      img {
       width: 300px;
@@ -88,11 +93,12 @@ p, a {
 
   a {
     background-color: white;
-    width: 120px;
+    max-width: 120px;
     padding: 15px 20px;
     font-size: 17px;
     letter-spacing: 2px;
     display: flex;
+    flex: 1;
     align-items: center;
     justify-content: center;
     line-height: 25px;
@@ -102,6 +108,10 @@ p, a {
     &:hover {
       color: #474747;
       background-color: rgba(238, 123, 30, 0.2);
+    }
+
+    @media(max-width: $breakpoint) {
+      padding: 15px 10px;
     }
   }
 
@@ -120,8 +130,8 @@ h1 {
   font-weight: 700;
   color: rgb(71, 71, 71);
   
-  @media(max-width: 880px) {
-    font-size: 65px;
+  @media(max-width: $breakpoint) {
+    font-size: 56px;
     text-align: center;
     margin-top: 36px;
   }
