Add open graph tags back

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@ layout: compress
   <head>
     <meta name='viewport' content='width=device-width'>
     <meta name='description' content="{{page.description}}" />
+    <meta property="og:title" content="Chris Lewis">
+    <meta property="og:description" content="Greetings traveller.">
+    <meta property="og:image" content="https://chrislewis.au/images/website_preview.png" />
     <link rel='icon' type='image/png' href='/images/icon.png' />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:700,700italic,400,400italic" rel="stylesheet" type="text/css">
     <title>{{page.title}}</title>
