--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,17 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name='viewport' content='width=device-width'>
+    <meta name='viewport' content='width=device-width' />
     <meta name='description' content="{{page.description}}" />
-    <meta property="og:title" content="Chris Lewis">
-    <meta property="og:description" content="Greetings traveller.">
+    <meta property="og:title" content="Chris Lewis" />
+    <meta property="og:description" content="Greetings traveller." />
     <meta property="og:image" content="https://chrislewis.au/images/website_preview.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://chrislewis.au/" />
+    <meta property="twitter:title" content="Chris Lewis | Software Engineer" />
+    <meta property="twitter:description" content="Various ramblings about me and my work." />
+    <meta property="twitter:image" content="https://chrislewis.au/images/website_preview.png" />
+    <meta name="twitter:creator" content="@chrislewis_aus" />
     <link rel='icon' type='image/png' href='/images/icon.png' />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:700,700italic,400,400italic" rel="stylesheet" type="text/css">
     <title>{{page.title}}</title>
