--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,14 @@ layout: compress
     <meta name='description' content="{{page.description}}" />
     <meta property="og:title" content="Chris Lewis" />
     <meta property="og:description" content="Greetings traveller." />
-    <meta property="og:image" content="https://chrislewis.au/images/website_preview_2.png" />
+    <meta property="og:image" content="https://chrislewis.au/images/website_preview_3.png" />
     <meta property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@chrislewis_aus">
+    <meta name="twitter:creator" content="@chrislewis_aus">
     <meta property="twitter:url" content="https://chrislewis.au/" />
     <meta property="twitter:title" content="Chris Lewis | Software Engineer" />
     <meta property="twitter:description" content="Various ramblings about me and my work." />
-    <meta property="twitter:image" content="https://chrislewis.au/images/website_preview_2.png" />
+    <meta property="twitter:image" content="https://chrislewis.au/images/website_preview_3.png" />
     <meta name="twitter:creator" content="@chrislewis_aus" />
     <link rel='icon' type='image/png' href='/images/icon.png' />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:700,700italic,400,400italic" rel="stylesheet" type="text/css">
