--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -1,4 +1,5 @@
-$breakpoint: 880px;
+$tablet-breakpoint: 880px;
+$mobile-breakpoint: 400px; 
 
 :root {
   --font: 'Inconsolata', monospace;
@@ -11,7 +12,7 @@ body, html {
   width: 100%;
   min-height: 100%;
 
-  @media(min-width: $breakpoint) {
+  @media(min-width: $tablet-breakpoint) {
     height: 100%;
   }
 }
@@ -76,7 +77,7 @@ p, a {
     }
   }
 
-  @media(max-width: $breakpoint) {
+  @media(max-width: $tablet-breakpoint) {
     flex-direction: column-reverse;
      img {
       width: 300px;
@@ -90,6 +91,12 @@ p, a {
   flex: 1;
   align-items: flex-end;
   column-gap: 20px;
+
+  @media(max-width: $mobile-breakpoint) {
+    row-gap: 20px;
+    align-items: flex-start;
+    flex-direction: column;
+  }
 
   a {
     background-color: white;
@@ -110,8 +117,13 @@ p, a {
       background-color: rgba(238, 123, 30, 0.2);
     }
 
-    @media(max-width: $breakpoint) {
+    @media(max-width: $tablet-breakpoint) {
       padding: 15px 10px;
+    }
+
+    @media(max-width: $mobile-breakpoint) {
+      width: 100%;
+      max-width: 100%;
     }
   }
 
@@ -128,7 +140,7 @@ h1 {
   font-weight: 700;
   color: rgb(71, 71, 71);
   
-  @media(max-width: $breakpoint) {
+  @media(max-width: $tablet-breakpoint) {
     font-size: 56px;
     text-align: center;
     margin-top: 36px;
