optimise styling for lighthouse

--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -1,11 +1,29 @@
 $tablet-breakpoint: 880px;
 $mobile-breakpoint: 400px; 
+$background-color: rgb(247, 247, 247);
+$text-color: #474747;
+$highlight-color: rgb(238, 123, 30);
 
-:root {
-  --font: 'Inconsolata', monospace;
-  --bg-color: rgb(247, 247, 247);
-  --text-color: #474747;
-  --highlight-color: rgb(238, 123, 30);
+/* latin */
+@font-face {
+  font-family: 'Inconsolata';
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inconsolata/v31/QlddNThLqRwH-OJ1UHjlKENVzkWGVkL3GZQmAwLyya15IDhunA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Inconsolata';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inconsolata/v31/QlddNThLqRwH-OJ1UHjlKENVzkWGVkL3GZQmAwLyya15IDhunA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body, html {
@@ -19,15 +37,15 @@ body, html {
 
 body {
   box-sizing: border-box;
-  font-family: var(--font);
+  font-family: 'Inconsolata', Helvetica, monospace;
   margin: 0;
   display: flex;
-  background-color: var(--bg-color);
+  background-color: $background-color;
   padding: 25px;
 }
 
 p, a {
-  color: var(--text-color);
+  color: $text-color;
 }
 
 #outer {
@@ -129,8 +147,8 @@ p, a {
 
   svg {
     margin-right: 10px;
-    color: var(--highlight-color);
-    fill: var(--highlight-color);
+    color: $highlight-color;
+    fill: $highlight-color;
   }
 }
 
