--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -157,6 +157,9 @@ h1 {
   margin: 0 0 20px;
   font-weight: 700;
   color: rgb(71, 71, 71);
+
+  // Specifically to avoid CLS in lighthouse benchmarks while font is loading
+  white-space: nowrap;
   
   @media(max-width: $tablet-breakpoint) {
     font-size: 56px;
