--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,25 +3,68 @@ theme:
   name: jb-svbtle
 layout: compress
 ---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name='viewport' content='width=device-width' />
-    <meta name='description' content="{{page.description}}" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="{{page.description}}" />
     <meta property="og:title" content="Chris Lewis" />
     <meta property="og:description" content="Greetings traveller." />
-    <meta property="og:image" content="https://chrislewis.au/images/website_preview_3.png" />
+    <meta
+      property="og:image"
+      content="https://chrislewis.au/images/website_preview_3.png"
+    />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@chrislewis_aus">
-    <meta name="twitter:creator" content="@chrislewis_aus">
+    <meta name="twitter:site" content="@chrislewis_aus" />
+    <meta name="twitter:creator" content="@chrislewis_aus" />
     <meta property="twitter:url" content="https://chrislewis.au/" />
     <meta property="twitter:title" content="Chris Lewis | Software Engineer" />
-    <meta property="twitter:description" content="Various ramblings about me and my work." />
-    <meta property="twitter:image" content="https://chrislewis.au/images/website_preview_3.png" />
+    <meta
+      property="twitter:description"
+      content="Various ramblings about me and my work."
+    />
+    <meta
+      property="twitter:image"
+      content="https://chrislewis.au/images/website_preview_3.png"
+    />
     <meta name="twitter:creator" content="@chrislewis_aus" />
-    <link rel='icon' type='image/png' href='/images/icon.png' />
+    <link rel="icon" type="image/png" href="/images/icon.png" />
     <title>{{page.title}}</title>
-    {% capture styles %}{% include css/style.scss %}{% endcapture %}<style>{{ styles | scssify }}</style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <style type="text/css">
+      @font-face {
+        font-family: "Pixelify Sans";
+        font-style: normal;
+        font-weight: 400 700;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/pixelifysans/v3/CHylV-3HFUT7aC4iv1TxGDR9Jn0Ei0tSaJ0.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122,
+          U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+      @font-face {
+        font-family: "Silkscreen";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/silkscreen/v6/m8JXjfVPf62XiF7kO-i9YLNla0GA1dM.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122,
+          U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
+    {% capture styles %}{% include css/style.scss %}{% endcapture %}
+    <style>
+      {{ styles | scssify }}
+    </style>
   </head>
   <body>
     {{content}}
